HBase Change Log

Release 0.20.4 - Unreleased
  INCOMPATIBLE CHANGES

  BUG FIXES
   HBASE-2173  New idx javadoc not included with the rest
   HBASE-2199  hbase.client.tableindexed.IndexSpecification,
               lines 72-73 should be reversed (Adrian Popescu via Stack)
   HBASE-2202  IdxRegion crash when binary characters
   HBASE-2203  [IHBase] Include only those columns required for indexed scan
   HBASE-2204  [IHBASE] Index expression evaluation should fail with a
               DoNotRetryException in case of an invalid index specification
   HBASE-2205  [IHBASE] Updated Idx pacakge javadocs
   HBASE-2206  [IHBASE] Idx memory allocation fix
   HBASE-2207  [IHBASE] Index partial column values
   HBASE-2227  [IHBASE] Idx Expression functionality is incompatible with
               SingleColumnValueFilter
   HBASE-2167  PE for IHBase
   HBASE-2210  NPE in thrift deleteAll (Igor Ranitovic via Stack)
   HBASE-2230  SingleColumnValueFilter has an ungaurded debug log message
   HBASE-2258  The WhileMatchFilter doesn't delegate the call to filterRow()
   HBASE-2259  StackOverflow in ExplicitColumnTracker when row has many columns
   HBASE-2244  META gets inconsistent in a number of crash scenarios
   HBASE-2284  fsWriteLatency metric may be incorrectly reported
               (Kannan Muthukkaruppan via Stack)
   HBASE-2063  For hfileoutputformat, on timeout/failure/kill clean up
               half-written hfile (Ruslan Salyakhov via Stack)
   HBASE-2288  Shell fails on alter
   HBASE-2293  CME in RegionManager#isMetaServer
   HBASE-2261  The javadoc in WhileMatchFilter and it's tests in TestFilter are
               not accurate/wrong
   HBASE-2299  [EC2] mapreduce fixups for PE
   HBASE-2295  Row locks may deadlock with themselves
               (dhruba borthakur via Stack)
   HBASE-2308  Fix the bin/rename_table.rb script, make it work again
   HBASE-2307  hbase-2295 changed hregion size, testheapsize broke... fix it