@@ -36,10 +36,6 @@ import org.apache.hadoop.hbase.ipc.TransactionalRegionInterface;
  * 
  */
 public class TransactionManager {
-  static {
-    TransactionalRPC.initialize();
-  }
-
   static final Log LOG = LogFactory.getLog(TransactionManager.class);
 
   private final HConnection connection;
