@@ -42,10 +42,6 @@ import org.apache.hadoop.hbase.util.Bytes;
  */
 public class TransactionalTable extends HTable {
   
-  static {
-    TransactionalRPC.initialize();
-  }
-  
   /**
    * @param conf
    * @param tableName
